--- a/tp1/index.html
+++ b/tp1/index.html
@@ -3,31 +3,91 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>TP1</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <style>
-          body{
-              background-color: #e9ebee;              
-              font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-              font-size: 16px;
-              margin: 0 auto;
-              max-width: 800px;              
-          }
-        </style>
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
+        <link rel="stylesheet" href="cv.css" />
+        <title>CV</title>
     </head>
+
     <body>        
-        <h1>TP1 </h1>
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
-        <img src="../galilee.png" alt="Logo Galilee"/>
+        <table width="100%" border="1"> 
+            <tr>
+                <td>Prénom NOM</td>
+                <td>Célibataire</td>
+            </tr>
+            <tr>
+                <td>93 Villetaneuse</td>
+                <td>Permis B</td>
+            </tr>
+            <tr>
+                <td>06 06 06 06 06</td>
+                <td><a href="#">nomprenom@mail.com</a></td>
+            </tr>
+        </table>
+        <h1>Ingénieur d'étude et développement</h1>
+        <h1>Formations</h1>
+        <table width="100%" border="1">
+            <tr>
+                <td>2016</td>
+                <td><a href="#">Master 3IR</a> à l'université Paris XIII</td>
+            </tr>
+            <tr>
+                <td>2014</td>
+                <td><a href="#">Licence Télécom</a> à l'université Paris XIII</td>
+            </tr>
+            <tr>
+                <td>2011</td>
+                <td>BAC S</td>
+            </tr>
+        </table>
+        <h1>Compétences</h1>
+        <table width="100%" border="1">
+            <tr>
+                <td>Développement</td>
+                <td>JAVA 7,HTML</td>
+            </tr>
+            <tr>
+                <td>Base de données</td>
+                <td>MySQL, postgreSQL</td>
+            </tr>
+            <tr>
+                <td>Réseaux</td>
+                <td>IPV6, LAN, WIFI</td>
+            </tr>
+            <tr>
+                <td>Langues</td>
+                <td>Anglais : bilingue, Français : langue maternelle</td>
+            </tr>
+        </table>
+        <h1>Experiences</h1>
+        <table width="100%" border="1">
+            <tr>
+                <td>2016</td>
+                <td>Stage de fin d'étude chez <a href="#"><img src="../logo-orange.jpg" alt="Logo orange" height="50" width="50"/> </a></td>
+            </tr>
+            <tr>
+                <td>2014</td>
+                <td>Stage chez <a href="#"><img src="../logo-edf.png" alt="Logo edf" height="40" width="60"/></a></td>
+            </tr>
+            <tr>
+                <td>2011</td>
+                <td>BAC S</td>
+            </tr>
+        </table>
+        <h1>Centes d'interets</h1>
+        <table width="100%" border="1">
+            <tr>
+                <td>Sport</td>
+                <td>Running, Volley-BAll</td>
+            </tr>
+            <tr>
+                <td>Culture</td>
+                <td>Cinéma, Musée</td>
+            </tr>
+            <tr>
+                <td>Voyage</td>
+                <td>Angleterre, Espagne</td>
+             </tr>
+        </table>
+
+       <!-- <img src="../galilee.png" alt="Logo Galilee"/> -->
     </body>
 </html>
