--- a/index.html
+++ b/index.html
@@ -3,55 +3,107 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>🏫 Index des TP</title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-
-        <link rel="apple-touch-icon" href="apple-touch-icon.png">
-        <!-- Place favicon.ico in the root directory -->
-
-        <style>
-          body{
-              background-color: #e9ebee;              
-              font-family: system, -apple-system, ".SFNSText-Regular", "San Francisco", "Roboto", "Segoe UI", "Helvetica Neue", "Lucida Grande", sans-serif;
-              font-size: 16px;
-              margin: 0 auto;
-              max-width: 800px;              
-          }
-        </style>
-        
-        <!-- Code à dé-commenter si besoin de fichier CSS ou JS -->
-        <!--<link rel="stylesheet" href="style.css">-->
-        <!--<script src="main.js"></script>-->
+        <link rel="stylesheet" href="cv.css" />
+        <title>CV Lydia BOUTERFA</title>
     </head>
-    <body>        
-        <h1>🏫 Page d'index des TP 🎒</h1>
-        <!-- Add your site or application content here -->
-        <p>Hello ☀️️</p>
-        <img src="galilee.png" alt="Logo Galilee"/>
-      
-      <ul>
-        <li>
-          <a href="tp1/index.html">/TP1</a>
-        </li>
-        <li>
-          <a href="tp2/index.html">/TP2</a>
-        </li>
-        <li>
-          <a href="tp3/index.html">/TP3</a>
-        </li>
-        <li>
-          <a href="tp4/index.html">/TP4</a>
-        </li>
-        <li>
-          <a href="tp5/index.html">/TP5</a>
-        </li>
-        <li>
-          <a href="tp6/index.html">/TP6</a>
-        </li>
-        <li>
-          <a href="tp7/index.html">/TP7</a>
-        </li>
-      </ul>
+
+    <body>       
+        <div id="corps">
+            <h1 class="introduction">Etudiante en Master ingénierie et innovation en images et réseaux</h1>
+            <div id="test">
+                <div id="left">
+                    <img src="../Photo_lydia_BOUTERFA.jpg" alt="photo Lydia" class="profil"/>
+                    <h1>Contact</h1>
+                    <table> 
+                        <tr>
+                            <td>Lydia BOUTERFA</td>
+                            <td class ="info">Célibataire</td>
+                        </tr>
+                        <tr>
+                            <td>123 boulevard d'Aulnay 93250 Villemomble</td>
+                            <td class ="info">Permis B</td>
+                        </tr>
+                        <tr>
+                            <td>+33 6 67 12 93 71</td>
+                            <td class ="info"><a href="mailto:bouterfalydia9@gmail.com" class= "white rose" title="Cliquez pour m'envoyer un mail">bouterfalydia9@gmail.com</a></td>
+                        </tr>
+                    </table>
+                    <h1>A propos de moi</h1>
+                    <p>Diplômée d’une première licence en télécommunications et d'une deuxième en science pour l’ingénieur.
+                    Actuellement en master 2 en ingénierie et innovation en images et réseaux, 
+                    je suis à la recherche d'un stage d'une durée de 6 mois à compter du mois d'Avril 2021.</P>
+                    <h1>Centes d'intérêt</h1>
+                    <table>
+                        <tr>
+                            <td>Sport</td>
+                            <td class= "interet">&#x1F3B3;Bowling, &#x1F3D0;Volley-BAll</td>
+                        </tr>
+                        <tr>
+                            <td>Culture</td>
+                            <td class= "interet">&#x1F4FD;&#xFE0F;Cinéma, &#x1F3DB;&#xFE0F; Musée</td>
+                        </tr>
+                    </table>
+                    <h1>Langues </h1>
+                    <table>
+                        <tr>
+                            <td>Français </td>
+                            <td class= "interet">courant</td>
+                        </tr>
+                        <tr>
+                            <td>Anglais</td>
+                            <td class= "interet">débutant</td>
+                        </tr>
+                    </table>
+                    <div class="reseau">
+                        <P ><a href="https://www.linkedin.com/in/lydia-bouterfa-a02465174/" class="reseau" target="_blank"> LinkedIn  <img src="../logo-linkedin.jpg" alt="Logo LinkedIn"/ class="petit"></a></p>
+                    </div>
+                </div>
+                <div id="right">
+                    <h1><a href='Formations.html' class="noir white" target="_blank">Formations</a></h1>
+                    <table>
+                        <tr>
+                            <td>De 2019 à 2020</td>
+                            <td><p class ="gras">Master en Ingénierie et Innovation en images et réseaux</p>
+                            <P class ="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</P></td>
+                        </tr>
+                        <tr>
+                            <td>De 2018 à 2019</td>
+                            <td><P class ="gras">Licence en Science pour l'ingénieur</P>
+                            <p class="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</p></td>
+                        </tr>
+                        <tr>
+                            <td>De 2016 à 2018 </td>
+                            <td><P class ="gras">Licence en Télécommunications</P>
+                            <p class="rose">Université Mouloud Mammeri Tizi Ouzou, Algérie</p></td>
+                        </tr>
+                    </table>
+                    <h1><a href='Experiences.html' class="noir white" target="_blank">Experiences</a></h1>
+                    <table>
+                        <tr>
+                            <td>Juin-Août 2019</td>
+                            <td><p class ="gras">Création et déploiement d'un site web responsif</P>
+                            <p class ="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</P></td>
+                        </tr>
+                        <tr>
+                            <td>Avril-Juin 2018</td>
+                            <td><p class ="gras">Projet de fin de cycle en réseaux mobiles</P>
+                            <p class ="rose">Université Mouloud Mammeri Tizi Ouzou, Algérie</P></td></td>
+                        </tr>
+                    </table>
+                    <h1><a href='Compétences.html' class="noir white" target="_blank">Compétences</a></h1>
+                    <table>
+                        <tr>
+                            <td>Réseaux </td>
+                            <td class="gras"><p>Cisco Packet Tracer, Wireshark  </p>
+                            <p>Administartion systeme sous linux : Marionnet</P></td>
+                        </tr>
+                        <tr>
+                            <td>Informatique </td>
+                            <td class="gras"><p>-HTML5 et CSS3</p><p>-MATLAB, JAVA</p></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
