--- a/tp1/index.html
+++ b/tp1/index.html
@@ -4,90 +4,106 @@
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
         <link rel="stylesheet" href="cv.css" />
-        <title>CV</title>
+        <title>CV Lydia BOUTERFA</title>
     </head>
 
-    <body>        
-        <table width="100%" border="1"> 
-            <tr>
-                <td>Prénom NOM</td>
-                <td>Célibataire</td>
-            </tr>
-            <tr>
-                <td>93 Villetaneuse</td>
-                <td>Permis B</td>
-            </tr>
-            <tr>
-                <td>06 06 06 06 06</td>
-                <td><a href="#">nomprenom@mail.com</a></td>
-            </tr>
-        </table>
-        <h1>Ingénieur d'étude et développement</h1>
-        <h1>Formations</h1>
-        <table width="100%" border="1">
-            <tr>
-                <td>2016</td>
-                <td><a href="#">Master 3IR</a> à l'université Paris XIII</td>
-            </tr>
-            <tr>
-                <td>2014</td>
-                <td><a href="#">Licence Télécom</a> à l'université Paris XIII</td>
-            </tr>
-            <tr>
-                <td>2011</td>
-                <td>BAC S</td>
-            </tr>
-        </table>
-        <h1>Compétences</h1>
-        <table width="100%" border="1">
-            <tr>
-                <td>Développement</td>
-                <td>JAVA 7,HTML</td>
-            </tr>
-            <tr>
-                <td>Base de données</td>
-                <td>MySQL, postgreSQL</td>
-            </tr>
-            <tr>
-                <td>Réseaux</td>
-                <td>IPV6, LAN, WIFI</td>
-            </tr>
-            <tr>
-                <td>Langues</td>
-                <td>Anglais : bilingue, Français : langue maternelle</td>
-            </tr>
-        </table>
-        <h1>Experiences</h1>
-        <table width="100%" border="1">
-            <tr>
-                <td>2016</td>
-                <td>Stage de fin d'étude chez <a href="#"><img src="../logo-orange.jpg" alt="Logo orange" height="50" width="50"/> </a></td>
-            </tr>
-            <tr>
-                <td>2014</td>
-                <td>Stage chez <a href="#"><img src="../logo-edf.png" alt="Logo edf" height="40" width="60"/></a></td>
-            </tr>
-            <tr>
-                <td>2011</td>
-                <td>BAC S</td>
-            </tr>
-        </table>
-        <h1>Centes d'interets</h1>
-        <table width="100%" border="1">
-            <tr>
-                <td>Sport</td>
-                <td>Running, Volley-BAll</td>
-            </tr>
-            <tr>
-                <td>Culture</td>
-                <td>Cinéma, Musée</td>
-            </tr>
-            <tr>
-                <td>Voyage</td>
-                <td>Angleterre, Espagne</td>
-             </tr>
-        </table>
-
-       <!-- <img src="../galilee.png" alt="Logo Galilee"/> -->
+    <body>       
+        <div id="corps">
+            <h1 class="introduction">Etudiante en Master ingénierie et innovation en images et réseaux</h1>
+            <div id="test">
+                <div id="left">
+                    <img src="../Photo_lydia_BOUTERFA.jpg" alt="photo Lydia" class="profil"/>
+                    <h1>Contact</h1>
+                    <table> 
+                        <tr>
+                            <td>Lydia BOUTERFA</td>
+                            <td class ="info">Célibataire</td>
+                        </tr>
+                        <tr>
+                            <td>123 boulevard d'Aulnay 93250 Villemomble</td>
+                            <td class ="info">Permis B</td>
+                        </tr>
+                        <tr>
+                            <td>+33 6 67 12 93 71</td>
+                            <td class ="info"><a href="mailto:bouterfalydia9@gmail.com" class= "white rose" title="Cliquez pour m'envoyer un mail">bouterfalydia9@gmail.com</a></td>
+                        </tr>
+                    </table>
+                    <h1>A propos de moi</h1>
+                    <p>Diplômée d’une première licence en télécommunications et d'une deuxième en science pour l’ingénieur.
+                    Actuellement en master 2 en ingénierie et innovation en images et réseaux, 
+                    je suis à la recherche d'un stage d'une durée de 6 mois à compter du mois d'Avril 2021.</P>
+                    <h1>Centes d'intérêt</h1>
+                    <table>
+                        <tr>
+                            <td>Sport</td>
+                            <td class= "interet">&#x1F3B3;Bowling, &#x1F3D0;Volley-BAll</td>
+                        </tr>
+                        <tr>
+                            <td>Culture</td>
+                            <td class= "interet">&#x1F4FD;&#xFE0F;Cinéma, &#x1F3DB;&#xFE0F; Musée</td>
+                        </tr>
+                    </table>
+                    <h1>Langues </h1>
+                    <table>
+                        <tr>
+                            <td>Français </td>
+                            <td class= "interet">courant</td>
+                        </tr>
+                        <tr>
+                            <td>Anglais</td>
+                            <td class= "interet">débutant</td>
+                        </tr>
+                    </table>
+                    <div class="reseau">
+                        <P ><a href="https://www.linkedin.com/in/lydia-bouterfa-a02465174/" class="reseau" target="_blank"> LinkedIn  <img src="../logo-linkedin.jpg" alt="Logo LinkedIn"/ class="petit"></a></p>
+                    </div>
+                </div>
+                <div id="right">
+                    <h1><a href='Formations.html' class="noir white" target="_blank">Formations</a></h1>
+                    <table>
+                        <tr>
+                            <td>De 2019 à 2020</td>
+                            <td><p class ="gras">Master en Ingénierie et Innovation en images et réseaux</p>
+                            <P class ="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</P></td>
+                        </tr>
+                        <tr>
+                            <td>De 2018 à 2019</td>
+                            <td><P class ="gras">Licence en Science pour l'ingénieur</P>
+                            <p class="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</p></td>
+                        </tr>
+                        <tr>
+                            <td>De 2016 à 2018 </td>
+                            <td><P class ="gras">Licence en Télécommunications</P>
+                            <p class="rose">Université Mouloud Mammeri Tizi Ouzou, Algérie</p></td>
+                        </tr>
+                    </table>
+                    <h1><a href='Experiences.html' class="noir white" target="_blank">Experiences</a></h1>
+                    <table>
+                        <tr>
+                            <td>Juin-Août 2019</td>
+                            <td><p class ="gras">Création et déploiement d'un site web responsif</P>
+                            <p class ="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</P></td>
+                        </tr>
+                        <tr>
+                            <td>Avril-Juin 2018</td>
+                            <td><p class ="gras">Projet de fin de cycle en réseaux mobiles</P>
+                            <p class ="rose">Université Mouloud Mammeri Tizi Ouzou, Algérie</P></td></td>
+                        </tr>
+                    </table>
+                    <h1><a href='Compétences.html' class="noir white" target="_blank">Compétences</a></h1>
+                    <table>
+                        <tr>
+                            <td>Réseaux </td>
+                            <td class="gras"><p>Cisco Packet Tracer, Wireshark  </p>
+                            <p>Administartion systeme sous linux : Marionnet</P></td>
+                        </tr>
+                        <tr>
+                            <td>Informatique </td>
+                            <td class="gras"><p>-HTML5 et CSS3</p><p>-MATLAB, JAVA</p></td>
+                        </tr>
+                    </table>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
