--- a/tp1/index.html
+++ b/tp1/index.html
@@ -24,7 +24,6 @@
                             <td class ="info">Permis B</td>
                         </tr>
                         <tr>
-                            <td>+33 6 67 12 93 71</td>
                             <td class ="info"><a href="mailto:bouterfalydia9@gmail.com" class= "white rose" title="Cliquez pour m'envoyer un mail">bouterfalydia9@gmail.com</a></td>
                         </tr>
                     </table>
@@ -55,21 +54,21 @@
                         </tr>
                     </table>
                     <div class="reseau">
-                        <P ><a href="https://www.linkedin.com/in/lydia-bouterfa-a02465174/" class="reseau" target="_blank"> LinkedIn  <img src="../logo-linkedin.jpg" alt="Logo LinkedIn"/ class="petit"></a></p>
+                        <P ><a href="https://www.linkedin.com/in/lydia-bouterfa-a02465174/" class="reseau"> LinkedIn  <img src="../logo-linkedin.jpg" alt="Logo LinkedIn"/ class="petit"></a></p>
                     </div>
                 </div>
                 <div id="right">
-                    <h1><a href='Formations.html' class="noir white" target="_blank">Formations</a></h1>
+                    <h1><a href='Formations.html' class="noir white">Formations</a></h1>
                     <table>
                         <tr>
                             <td>De 2019 à 2020</td>
                             <td><p class ="gras">Master en Ingénierie et Innovation en images et réseaux</p>
-                            <P class ="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</P></td>
+                            <P class ="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université">Université Sorbonne Paris Nord Villetaneuse, France</P></td>
                         </tr>
                         <tr>
                             <td>De 2018 à 2019</td>
                             <td><P class ="gras">Licence en Science pour l'ingénieur</P>
-                            <p class="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</p></td>
+                            <p class="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université">Université Sorbonne Paris Nord Villetaneuse, France</p></td>
                         </tr>
                         <tr>
                             <td>De 2016 à 2018 </td>
@@ -77,12 +76,12 @@
                             <p class="rose">Université Mouloud Mammeri Tizi Ouzou, Algérie</p></td>
                         </tr>
                     </table>
-                    <h1><a href='Experiences.html' class="noir white" target="_blank">Experiences</a></h1>
+                    <h1><a href='Experiences.html' class="noir white">Experiences</a></h1>
                     <table>
                         <tr>
                             <td>Juin-Août 2019</td>
                             <td><p class ="gras">Création et déploiement d'un site web responsif</P>
-                            <p class ="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université" target="_blank">Université Sorbonne Paris Nord Villetaneuse, France</P></td>
+                            <p class ="rose"><a href='https://galilee.univ-paris13.fr/master/master-ingenierie-innovation-images-reseaux-m3ir/' class="black rose" title="c'est le site de l'université">Université Sorbonne Paris Nord Villetaneuse, France</P></td>
                         </tr>
                         <tr>
                             <td>Avril-Juin 2018</td>
@@ -90,7 +89,7 @@
                             <p class ="rose">Université Mouloud Mammeri Tizi Ouzou, Algérie</P></td></td>
                         </tr>
                     </table>
-                    <h1><a href='Compétences.html' class="noir white" target="_blank">Compétences</a></h1>
+                    <h1><a href='Compétences.html' class="noir white">Compétences</a></h1>
                     <table>
                         <tr>
                             <td>Réseaux </td>
